[package]
name = "hunt-the-wumpus"
version = "0.1.0"
authors = ["Daniel Rees <daniel.rees@autodata.net>"]
edition = "2018"
[[bin]]
name = "hunt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4"

[dependencies.yew]
yew = "0.9.2"

[lib]
name = "hunt_the_wumpus"
path = "src/lib.rs"